# swarmkit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  conanfile.py
.cache/clangd/index/: agent_server.cpp.09D623B12585E9F9.idx  agent_server.cpp.681EE17A928E9C34.idx  agent_server.h.6A84A57081890B8B.idx  agent_server.hpp.8E65BF291213A80A.idx  backend_factory.h.047D2E8EFFF9C477.idx  backend_factory.hpp.E375F5F34F7D4551.idx  commands.h.B3007C1BDA7BDF34.idx  commands.hpp.DD77C95754ED40B7.idx  crc32.cpp.2764D4CCCE4017F6.idx  crc32.cpp.D15425F20AC753F7.idx  crc32.h.DC7A5C63B9062353.idx  crc32.hpp.77FB6E5E4D611232.idx  drone_backend.h.53D2032FB75AF6D0.idx  drone_backend.hpp.16F95D78C61F7848.idx  logger.cpp.BE9F7086F9905326.idx  logger.cpp.E00F99654E387D6D.idx  logger.h.6CB9BB18BD982EA6.idx  logger.h.A930D0B74B4073EE.idx  main.cpp.4ABB116C26120CDE.idx  main.cpp.684A9CDE5CDF523B.idx  main.cpp.D5B9DB9281EA5556.idx  main.cpp.E5E14B2931DB3B3A.idx  mock_backend.cpp.67BF2253BE75DB92.idx  mock_backend.cpp.FCF89E4CBB11C5A7.idx  result.h.654112AFCC8091E3.idx  result.hpp.A43E9C081419D578.idx  scenario.h.64EFE1283C627529.idx  scenario.hpp.2CACB0AE032919EB.idx  scenario_yaml.cpp.2F29AB9DEF053B92.idx  scenario_yaml.cpp.79796982C951277F.idx  telemetry.h.5ABE325FACD502EC.idx  telemetry.hpp.06C9E8A06B1B425F.idx  test_basic.cpp.11B218BAEC357614.idx  test_basic.cpp.4DD613FC59ECCD62.idx  version.h.389C35ECB3938D4F.idx  version.h.40F4A4EF3BA96FA1.idx
apps/: CMakeLists.txt
apps/agent/: app.cpp  app.h  configuration.cpp  configuration.h  main.cpp  usage.cpp  usage.h
apps/cli/: app.cpp  app.h  command_builder.cpp  command_builder.h  constants.h  flight_command_parser.cpp  flight_command_parser.h  main.cpp  mission_command_parser.cpp  mission_command_parser.h  nav_command_parser.cpp  nav_command_parser.h  options.cpp  options.h  output.cpp  output.h  payload_command_parser.cpp  payload_command_parser.h  runtime.cpp  runtime.h  telemetry_sink.cpp  telemetry_sink.h  usage.cpp  usage.h
apps/common/: arg_utils.h
apps/test_client/: CMakeLists.txt  main.cpp
apps/test_tools/: CMakeLists.txt  test_agents.cpp  test_client.cpp  test_server.cpp
cmake/: SwarmKitConfig.cmake.in  SwarmkitOptions.cmake  SwarmkitSanitizers.cmake  SwarmkitWarnings.cmake
docs/: PROJECT_MEMORY.md
include/swarmkit/: commands.h
include/swarmkit/agent/: agent_server.h  arbiter.h  backend.h  mavlink_backend.h  server.h  sim_backend.h
include/swarmkit/client/: client.h  swarm_client.h
include/swarmkit/commands/: flight.h  mission.h  nav.h  payload.h  swarm.h
include/swarmkit/core/: backend_factory.h  commands.h  crc32.h  drone_backend.h  logger.h  overloaded.h  result.h  security.h  telemetry.h  version.h.in
include/swarmkit/scenario/: scenario.h
packaging/: cpack.cmake
packaging/windows/: README.md
proto/: CMakeLists.txt  swarmkit.proto
scripts/: ci_package_linux_x86_64.sh  ci_package_mac_arm64.sh  ci_package_win_x86_64.ps1  deploy_sdk_mac.sh  run-clang-tidy.sh
src/agent/: CMakeLists.txt  active_goal_supervisor.cpp  active_goal_supervisor.h  agent_server.cpp  arbiter.cpp  report_hub.cpp  report_hub.h  runtime_counters.h  server.cpp  server_test_support.h  telemetry_manager.cpp  telemetry_manager.h
src/agent/backends/: mavlink_backend.cpp  mavlink_command_executor.cpp  mavlink_command_executor.h  mavlink_common.cpp  mavlink_common.h  mavlink_mission_protocol.cpp  mavlink_mission_protocol.h  mavlink_state_cache.cpp  mavlink_state_cache.h  mavlink_telemetry_decoder.cpp  mavlink_telemetry_decoder.h  mavlink_udp_transport.cpp  mavlink_udp_transport.h  sim_backend.cpp
src/client/: CMakeLists.txt  client.cpp  config_io.cpp  swarm_client.cpp
src/core/: CMakeLists.txt  config_yaml.h  crc32.cpp  crc32.h  env_utils.h  logger.cpp  mock_backend.cpp  security_utils.h
src/scenario/: scenario_yaml.cpp
testdata/: agent_config.yaml  agent_mavlink_drone1.yaml  client_config.yaml  demo_scenario.yaml  swarm_config.yaml
testdata/certs/: README.md  agent.key  agent.pem  ca.key  ca.pem  server_ext.cnf  swarmkit-cli.key  swarmkit-cli.pem  test-client.key  test-client.pem  test-server.key  test-server.pem
tests/: CMakeLists.txt  test_arbiter.cpp  test_basic.cpp  test_client_integration.cpp  test_config.cpp  test_logger.cpp  test_sim_backend.cpp  test_support.h  test_swarm_client.cpp
